--- a/DroidDialer/res/layout/main.xml
+++ b/DroidDialer/res/layout/main.xml
@@ -1,32 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
- Copyright (c) Oliver Bye 2010
+	<!--
+		Copyright (c) Oliver Bye 2010 Licensed under the Apache License,
+		Version 2.0 (the "License"); you may not use this file except in
+		compliance with the License. You may obtain a copy of the License at
 
- Licensed under the Apache License, Version 2.0 (the "License");
- you may not use this file except in compliance with the License.
- You may obtain a copy of the License at
- 
-       http://www.apache.org/licenses/LICENSE-2.0
- 
- Unless required by applicable law or agreed to in writing, software
- distributed under the License is distributed on an "AS IS" BASIS,
- WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- See the License for the specific language governing permissions and
- limitations under the License.
--->
+		http://www.apache.org/licenses/LICENSE-2.0 Unless required by
+		applicable law or agreed to in writing, software distributed under the
+		License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR
+		CONDITIONS OF ANY KIND, either express or implied. See the License for
+		the specific language governing permissions and limitations under the
+		License.
+	-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="wrap_content" android:layout_height="wrap_content"
 	android:orientation="vertical" android:paddingLeft="6dip"
 	android:paddingRight="6dip" android:paddingBottom="3dip">
 
+	<CheckBox android:text="@string/checkbox_enable_tones_name"  android:id="@+id/EnableTonesCheckBox"
+		android:layout_width="wrap_content" android:layout_height="wrap_content" android:gravity="right"/>
+	
 	<EditText android:id="@+id/numberEdit" android:maxLines="1"
 		android:layout_marginTop="2dip" android:layout_width="wrap_content"
 		android:ems="25" android:layout_height="wrap_content"
 		android:scrollHorizontally="true" android:inputType="phone" />
-		
+
 
 	<Button android:id="@+id/dialButton" android:layout_width="wrap_content"
 		android:layout_height="wrap_content" android:layout_gravity="right"
 		android:text="@string/button_dial" />
+
 
 </LinearLayout>
