Preference strategy working (Tests:Fail) - Can't launch contacts from Preference Dialog

--- a/DroidDialer/res/xml/preferences.xml
+++ b/DroidDialer/res/xml/preferences.xml
@@ -15,6 +15,7 @@
 
 	<CheckBoxPreference android:key="enableTones"
 		android:title="@string/enable_tones_title"
-		android:summary="@string/enable_tones_summary" />
+		android:summaryOn="@string/enable_tones_summaryOn"
+		android:summaryOff="@string/enable_tones_summaryOff"/>
 
 </PreferenceScreen>
