--- a/DroidDialer/res/xml/preferences.xml
+++ b/DroidDialer/res/xml/preferences.xml
@@ -14,8 +14,19 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<CheckBoxPreference android:key="enableTones"
-		android:title="@string/enable_tones_title"
-		android:summaryOn="@string/enable_tones_summaryOn"
-		android:summaryOff="@string/enable_tones_summaryOff"/>
+		android:title="@string/enable_tones_title" android:summaryOn="@string/enable_tones_summaryOn"
+		android:summaryOff="@string/enable_tones_summaryOff" />
+
+	<net.xpdeveloper.dialer.ToneDialHelp
+		android:title="Help" android:summary="How to use tone dial."
+		android:defaultValue="100" />
+
+	<PreferenceScreen android:title="Web" android:summary="Visit the website">
+
+		<intent android:action="android.intent.action.VIEW"
+			android:data="http://xpdeveloper.net" />
+
+	</PreferenceScreen>
+
 
 </PreferenceScreen>
