--- a/DroidDialer/res/xml/preferences.xml
+++ b/DroidDialer/res/xml/preferences.xml
@@ -21,19 +21,16 @@
 		android:defaultValue="@string/default_value_country_code_preference"
 		android:title="@string/title_country_code_preference" android:summary="@string/summary_country_code_preference"
 		android:dialogTitle="@string/dialog_title_country_code_preference"
-		android:dialogMessage="@string/dialog_message_country_code_preference" />
-
+		android:dialogMessage="@string/dialog_message_country_code_preference"
+		android:inputType="phone"/>
 
 	<EditTextPreference android:key="trunk_code_edittext"
 		android:defaultValue="@string/default_value_trunk_code_preference"
 		android:title="@string/title_trunk_code_preference"
 		android:summary="@string/summary_trunk_code_preference"
 		android:dialogTitle="@string/dialog_title_trunk_code_preference"
-		android:dialogMessage="@string/dialog_message_trunk_code_preference" />
-
-	<net.xpdeveloper.dialer.ToneDialHelp
-		android:title="Help" android:summary="How to use tone dial."
-		android:defaultValue="100" />
+		android:dialogMessage="@string/dialog_message_trunk_code_preference"
+		android:inputType="phone"/>
 
 	<PreferenceScreen android:title="Web"
 		android:summary="Visit the website to raise issues.">
