--- a/ToneDialLibrary/res/xml/preferences.xml
+++ b/ToneDialLibrary/res/xml/preferences.xml
@@ -17,10 +17,6 @@
 		android:title="@string/enable_tones_title" android:summaryOn="@string/enable_tones_summaryOn"
 		android:summaryOff="@string/enable_tones_summaryOff" />
 
-	<CheckBoxPreference android:key="enableTonesOnce"
-		android:title="@string/enable_tones_once_title" android:summaryOn="@string/enable_tones_once_summaryOn"
-		android:summaryOff="@string/enable_tones_once_summaryOff" />
-
 	<EditTextPreference android:key="net.xpdeveloper.dialer.EXTRA_COUNTRY_CODE"
 		android:defaultValue="@string/default_value_country_code_preference"
 		android:title="@string/title_country_code_preference" android:summary="@string/summary_country_code_preference"
@@ -41,7 +37,17 @@
 			android:data="content://contacts/people" />
 	</PreferenceScreen>
 
-	<PreferenceScreen android:key="net.xpdeveloper.dialer.WEB"
+	<CheckBoxPreference android:key="enableTonesOnce"
+		android:title="@string/enable_tones_once_title" android:summaryOn="@string/enable_tones_once_summaryOn"
+		android:summaryOff="@string/enable_tones_once_summaryOff" />
+
+	<PreferenceScreen android:key="net.xpdeveloper.dialer.PREF_UPGRADE"
+		android:title="Upgrade" android:summary="Upgrade to enable features">
+		<intent android:action="android.intent.action.VIEW"
+			android:data="market://details?id=net.xpdeveloper.dialer.unlimited" />
+	</PreferenceScreen>
+
+	<PreferenceScreen android:key="net.xpdeveloper.dialer.PREF_WEB"
 		android:title="Web" android:summary="Visit the website to raise issues">
 		<intent android:action="android.intent.action.VIEW"
 			android:data="http://code.google.com/p/tonedial/issues/list" />
